--- a/BikeStore/BikeStore.csproj
+++ b/BikeStore/BikeStore.csproj
@@ -201,9 +201,20 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201704021535057_AddPhone.cs" />
+    <Compile Include="Migrations\201704021535057_AddPhone.Designer.cs">
+      <DependentUpon>201704021535057_AddPhone.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\Store\Good.cs" />
+    <Compile Include="Models\Store\ListOfGoods.cs" />
+    <Compile Include="Models\Store\Manufacturer.cs" />
+    <Compile Include="Models\Store\Order.cs" />
+    <Compile Include="Models\Store\StoreContext.cs" />
+    <Compile Include="Models\Store\Type.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -268,6 +279,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Roles\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -276,6 +288,11 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201704021535057_AddPhone.resx">
+      <DependentUpon>201704021535057_AddPhone.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
