--- a/BikeStore/BikeStore.csproj
+++ b/BikeStore/BikeStore.csproj
@@ -80,6 +80,8 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -204,9 +206,13 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201704021535057_AddPhone.cs" />
-    <Compile Include="Migrations\201704021535057_AddPhone.Designer.cs">
-      <DependentUpon>201704021535057_AddPhone.cs</DependentUpon>
+    <Compile Include="Migrations\201705021047334_ForeignKeyRemoved.cs" />
+    <Compile Include="Migrations\201705021047334_ForeignKeyRemoved.Designer.cs">
+      <DependentUpon>201705021047334_ForeignKeyRemoved.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201705021128484_PhoneDeletedFromModel.cs" />
+    <Compile Include="Migrations\201705021128484_PhoneDeletedFromModel.Designer.cs">
+      <DependentUpon>201705021128484_PhoneDeletedFromModel.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -217,7 +223,6 @@
     <Compile Include="Models\Store\ListOfGoods.cs" />
     <Compile Include="Models\Store\Manufacturer.cs" />
     <Compile Include="Models\Store\Order.cs" />
-    <Compile Include="Models\Store\StoreContext.cs" />
     <Compile Include="Models\Store\Type.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -984,7 +989,9 @@
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\Services\JsonCardModule.js" />
     <Content Include="Scripts\_references.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
@@ -1038,8 +1045,14 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201704021535057_AddPhone.resx">
-      <DependentUpon>201704021535057_AddPhone.cs</DependentUpon>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201705021047334_ForeignKeyRemoved.resx">
+      <DependentUpon>201705021047334_ForeignKeyRemoved.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201705021128484_PhoneDeletedFromModel.resx">
+      <DependentUpon>201705021128484_PhoneDeletedFromModel.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
