--- a/BikeDataAccess/BikeDataAccess.csproj
+++ b/BikeDataAccess/BikeDataAccess.csproj
@@ -58,11 +58,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Base\BaseRepository.cs" />
     <Compile Include="Context.cs" />
-    <Compile Include="GoodRepository.cs" />
-    <Compile Include="IRepository.cs" />
+    <Compile Include="GoodRepository%28old%29.cs" />
+    <Compile Include="IRepository%28old%29.cs" />
+    <Compile Include="Migrations\201705121329262_BaseEntityUsage.cs" />
+    <Compile Include="Migrations\201705121329262_BaseEntityUsage.Designer.cs">
+      <DependentUpon>201705121329262_BaseEntityUsage.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UserRepository.cs" />
+    <Compile Include="Repositories\GoodRepository.cs" />
+    <Compile Include="Repositories\ManufacturerRepository.cs" />
+    <Compile Include="Repositories\TypeRepository.cs" />
+    <Compile Include="Repositories\UserRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BikeEntities\BikeEntities.csproj">
@@ -77,6 +86,11 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201705121329262_BaseEntityUsage.resx">
+      <DependentUpon>201705121329262_BaseEntityUsage.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
